--- a/addClass.html
+++ b/addClass.html
@@ -1,6 +1,6 @@
 <script>
   $(document).ready(function() {
-    $("selector").addClass("animated bounce");
+    $("HTMLtype").addClass("animated bounce");
     $(".cssclass").addClass("animated shake");
     $("#id").addClass("animated fadeOut");
   });
