--- a/addClass.html
+++ b/addClass.html
@@ -9,8 +9,8 @@
   <li>addClass("animated bounce")</li>
   <li>addClass("animated shake")</li>
   <li>addClass("animated fadeOut")</li>
-  <li>addClass("")</li>
-  <li>addClass("")</li>
+  <li>addClass("any Bootstrap Class")</li>
+  <li>addClass("any CSS Class")</li>
   <li>addClass("")</li>
 </ol>
 
