--- a/addClass-removeClass.html
+++ b/addClass-removeClass.html
@@ -21,6 +21,16 @@
   <li>remove
     Class("")</li>
 </ol>
+<h2>remove and html element</2>
+<ol><li>$("HTMLtype, #id").remove();</li></ol>
+<h2>disable an element</h2>
+<ul>
+  <li>$("HTMLtype, #id").proc("disabled", true)</li>
+</ul>
+<h2></h2>
+<ul>
+  <li></li>
+</ul>
 
 
 
