Update and rename addClass-removeClass.html to Jquery-classes.html
adding appendTo

--- a/Jquery-classes.html
+++ b/Jquery-classes.html
@@ -27,11 +27,16 @@
 <ul>
   <li>$("HTMLtype, #id").proc("disabled", true)</li>
 </ul>
-<h2></h2>
+
+
+<h2>appendTo Class</h2>
+<p>jQuery has a function called appendTo() that allows you to select HTML elements and append them to another element.</P>
 <ul>
-  <li></li>
+  <li>$("HTMLtype, #id").appendTo("htmltype, #id")</li>
 </ul>
 
-
+<h2></h2>
+<p></p>
+<ul><li></li></ul>
 
 <p> Reference documentation: <a href="https://api.jquery.com/addclass/"> JQuery addClass </a></p>
