--- a/Jquery-classes.html
+++ b/Jquery-classes.html
@@ -35,6 +35,13 @@
   <li>$("HTMLtype, #id").appendTo("htmltype, #id")</li>
 </ul>
 
+<h2>parent() class</h2>
+<p>jQuery has a function called parent() that allows you to access the parent of whichever element you've selected.</p>
+<ul><li>$("htmltype, #id").parent().css("color", "blue");</li></ul>
+<h2>children() class</h2>
+<p>jQuery has a function called children() that allows you to access the children of whichever element you've selected.</p>
+<ul><li>$("htmltype, #id").children().css("color", "blue");</li></ul>
+
 <h2></h2>
 <p></p>
 <ul><li></li></ul>
